--- a/style.css
+++ b/style.css
@@ -4,69 +4,47 @@
     box-sizing: border-box;
     font-family:'Poppins',sans-serif;
 }
-a{
-    text-decoration: none;
+body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-a:hover{
-    text-decoration: none;
-}
-section{
-    padding:60px 0;
+header{
+    height:100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
 }
-#hero
-{
-    width:100%;
-    height:100vh;
-    background-image:linear-gradient(rgba(13, 6, 20, 0.3),rgba(13, 6, 20, 0.3));
-    background-position:center ;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-}
-   
-.video{
-    position:fixed;
-    z-index: -1;
-    top:0;
-    right:0;
-    bottom:0;
-}
-#hero .container
-{
-padding-top: 60px;
-}
+  .text{
+    position: absolute;
+    color:#fff;
+    line-height: 1.5;
+    text-align: center;
+  } 
 
-#hero h1{
-    font-family:sans-serif;
-    font-size: 50px;
-    font-weight: 800;
+.overlay{
+    position: absolute;
+    height:100vh;
+    width:100vw;
+    background:#1b8012 ;
+    opacity:0.2;
+}
+.text button{
+    background:green;
+    border-radius: 40px;
     color:#fff;
-    margin: 0 0 10 0;
+    font-size: 1.5em;
+    padding:.3em 1.2em;
+    text-decoration: none;
+    box-sizing: border-box;
+    cursor: pointer;
 }
-#hero h5{
-    font-size:medium;
-    font-weight: 500;
-    color:#92d811;
-    margin-bottom: 40px;
-    letter-spacing: 20px;
+.text h1{
+    font-size: 3.5em;
+    font-family: verdana;
 }
-#hero .btn_get_started{
-    font-family:'poppins' ;
-    font-weight: 500;
-    text-transform: uppercase;
-    font-size: 14px;
-    display: inline-block;
-    border-radius: 50px;
-    border:2px solid #fff;
-    color:#fff;
-    background-color: transparent;
-    margin:10px;
-    padding:8px 28px;
-    text-align:center;
-    letter-spacing: 1px;
+.text h5{
+    font-size: 1.5em;
+    color:chartreuse;
+    letter-spacing: 5px;
 }
-#hero .btn_get_started:hover,.btn_get_started:hover{
-    background-color:#107e06;
-    border-radius:2px solid #fff ;
-}
+ 
